# lucid-lint

./: .agnix.toml  .editorconfig  .gitattributes  .gitignore  .impeccable.md  .lycheeignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  RULES.md  SECURITY.md  _typos.toml  action.yml  clippy.toml  deny.toml  justfile  lucid-lint.toml  pyproject.toml  rust-toolchain.toml
.agent/: context.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  rule_proposal.yml
.github/workflows/: action-smoke.yml  ci.yml  codeql.yml  coverage.yml  docs-deploy.yml  release.yml  scorecard.yml
assets/: square-contact-sheet.html
benches/: parser_hotpath.rs
brainstorm/: 20260419-inline-disable-feature.md  20260420-score-semantics.md
docs/: book.toml
docs/src/: 404.md  SUMMARY.md  accessibility.md  contributing.md  introduction.md  references.md  roadmap.md
docs/src/architecture/: design-decisions.md  overview.md
docs/src/fr/: accessibility.md  contributing.md  index.md  references.md  roadmap.md  rules-index.md
docs/src/guide/: ci-integration.md  conditions.md  configuration.md  installation.md  profiles.md  quick-start.md  scoring.md  suppression.md
docs/src/rules/: all-caps-shouting.md  conditional-stacking.md  consecutive-long-sentences.md  consonant-cluster.md  deep-subordination.md  deeply-nested-lists.md  dense-punctuation-burst.md  excessive-commas.md  excessive-nominalization.md  heading-jump.md  homophone-density.md  index.md  italic-span-long.md  jargon-undefined.md  large-number-unanchored.md  line-length-wide.md  long-enumeration.md  low-lexical-diversity.md  mixed-numeric-format.md  nested-negation.md  number-run.md  paragraph-too-long.md  parenthetical-depth.md  passive-voice.md  readability-score.md  redundant-intensifier.md  repetitive-connectors.md  sentence-too-long.md  unclear-antecedent.md  unexplained-abbreviation.md  weasel-words.md
docs/tapes/: README.md  explain.tape  hero.tape  profiles.tape  score-clean.tape  score-fail.tape  shared.tape
docs/tapes/fixtures/: clean.md
docs/theme/: head.hbs  index.hbs
examples/: REFERENCES.md  lucid-lint.toml  sample.md  texts.md  texts.yaml
examples/local/: README.md
examples/public/: README.md  SOURCES.md
proptest-regressions/parser/: markdown.txt
scripts/: README.md  backfill_en_source_sha.py  check_lang_staleness.py  sanitize-stock-css.py  sync-roadmap.py  sync_lang_counterparts.py  test_texts_coverage.py  texts_clean.py  texts_common.py  texts_convert.py  texts_coverage.py  texts_fetch.py
src/: cli.rs  condition.rs  config.rs  engine.rs  explain.rs  lib.rs  main.rs  scoring.rs  types.rs
src/language/: detect.rs  en.rs  fr.rs  mod.rs
src/output/: json.rs  mod.rs  quick_wins.rs  sarif.rs  tty.rs
src/parser/: document.rs  markdown.rs  mod.rs  phrase_search.rs  tokenizer.rs
src/rules/: all_caps_shouting.rs  conditional_stacking.rs  consecutive_long_sentences.rs  consonant_cluster.rs  deep_subordination.rs  deeply_nested_lists.rs  dense_punctuation_burst.rs  enumeration.rs  excessive_commas.rs  excessive_nominalization.rs  heading_jump.rs  jargon_undefined.rs  line_length_wide.rs  long_enumeration.rs  low_lexical_diversity.rs  mixed_numeric_format.rs  mod.rs  nested_negation.rs  paragraph_too_long.rs  passive_voice.rs  readability_score.rs  redundant_intensifier.rs  repetitive_connectors.rs  sentence_too_long.rs  unclear_antecedent.rs  unexplained_abbreviation.rs  weasel_words.rs
tests/: bilingual_coverage.rs  cli.rs  roadmap_id_uniqueness.rs  rule_docs_coverage.rs
(+216 files in other folders)
