[package]
name = "lucid-lint"
version = "0.2.2"
edition = "2021"
rust-version = "1.80"
authors = ["Bastien Gallay <bastien@example.com>"]
description = "A cognitive accessibility linter for prose. Bilingual EN/FR. CI-native."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bastien-gallay/lucid-lint"
homepage = "https://github.com/bastien-gallay/lucid-lint"
documentation = "https://bastien-gallay.github.io/lucid-lint"
keywords = ["linter", "prose", "accessibility", "readability", "markdown"]
categories = ["text-processing", "command-line-utilities", "accessibility"]
# `src/explain.rs` uses `include_str!("../docs/src/rules/<slug>.md")`
# to bundle rule reference pages into the binary, so `docs/src/rules/`
# must ship in the crate. Everything else under `docs/` (theme, CSS,
# mdBook output) is excluded to keep the package lean.
include = [
    "src/**/*.rs",
    "docs/src/rules/*.md",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "CHANGELOG.md",
    "RULES.md",
    "CONTRIBUTING.md",
    "CODING_STANDARDS.md",
    "ROADMAP.md",
    "AGENTS.md",
]

[[bin]]
name = "lucid-lint"
path = "src/main.rs"

[lib]
name = "lucid_lint"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# Parsing
pulldown-cmark = { version = "0.13", default-features = false }
unicode-segmentation = "1.12"
unicode-normalization = "0.1"

# Path matching
globset = "0.4"

# Language detection
# Simple heuristic for v0.1; revisit with `whatlang` if needed.

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Output
owo-colors = { version = "4.1", features = ["supports-colors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1.41", features = ["yaml", "filters", "redactions"] }
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
proptest = "1.5"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "parser_hotpath"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0

# cargo-dist config for releases
[workspace.metadata.dist]
cargo-dist-version = "0.25.1"
ci = ["github"]
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
# release.yml is hand-maintained; tell dist not to fail when its own
# template drifts. Track cargo-dist upgrades explicitly.
allow-dirty = ["ci"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
# Enable pedantic and nursery groups as warnings; selectively allow noisy ones.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allows that are pragmatic.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Tests rely on unwrap/expect for clarity; statistical casts are acceptable.
unwrap_used = "allow"
expect_used = "allow"
cast_precision_loss = "allow"
match_same_arms = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
missing_const_for_fn = "allow"
redundant_pub_crate = "allow"

# Denies for hygiene.
panic = "warn"
todo = "warn"
unimplemented = "warn"
